# shutdown-timer

./: README.md  pyproject.toml  shutdown_timer.spec
src/: shutdown_timer.py  shutdown_timer_ui.py  st.ui  tempCodeRunnerFile.py
