[project]
name = "shutdown-timer"
version = "0.1.0"
description = ""
authors = [
    {name = "Han",email = "81735797+Han-Dong-Jin@users.noreply.github.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pyqt5 (==5.15.9)",
    "pyqt5-tools (>=5.15.9.3.3,<6.0.0.0.0)"
]

[tool.poetry]
packages = [{include = "shutdown_timer", from = "src"}]


[tool.poetry.group.dev.dependencies]
pyinstaller = {version = "^6.13.0", python = "<3.14"}

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
